grammar.js
        source_file: ($) => repeat($._implementation),

        let_declaration: ($) => seq(
            'let',
            optional('static'),
            $.identifier, '=',
            $._seq_expression
        ),
        fun_declaration: ($) => seq(
            choice(
                seq(optional('atomic'), $.kind),
                seq('let', optional('atomic'),
                    optional($.kind))
            ),
            alias($.identifier, $.fun_name),
            repeat1($._simplepattern),
            '=',
            $._seq_expression,
            optional(seq(
                'where',
                optional('rec'),
                $._equation_list))
        ),
        _implementation: ($) => choice(
            // open
            seq('open', $.constructor),

            // type [params] name
            seq('type',
                optional($._type_params),
                alias($.identifier, $.ty_name)
            ),
            // type[params] name = decl
            seq('type',
                optional($._type_params),
                alias($.identifier, $.ty_name),
                $._type_declaration
            ),

            // let static? var
            $.let_declaration,

            // let? atomic? K? id(args...) = expr (where rec? equations...)?
            $.fun_declaration,

            // This is only correct in interface (.zli) files, since I don't want to write a second tree-sitter package for the simple syntax of .zli files, I add it here
            // TODO: write a separate tree-sitter package for .zli files
            // val x : ty
            $.val_declaration
        ),


        _seq_expression: ($) => prec.right(PREC.seq,
            separated_nonempty_list(';', $._expression)
        ),
        present_expression: ($) => prec.right(PREC.present,
            seq(
                'present',
                optional('|'),
                present_handlers($._scondpat, $
                    ._expression),
                optional(choice(
                    seq('init',
                        $._expression),
                    seq('else',
                        $._expression,
                        optional('end'))
                ))
            )
        ),
        match_expression: ($) => prec.right(PREC.match,
            seq(
                'match',
                $._seq_expression,
                'with',
                optional('|'),
                $._match_handlers_expression,
                optional('end')
            )
        ),
        reset_expression: ($) => seq(
            'reset',
            $._seq_expression,
            'every',
            $._expression
        ),
        let_expression: ($) => prec.right(PREC.match,
            seq(
                'let',
                optional('rec'),
                $._equation_list,
                'in',
                $._seq_expression
            )
        ),
        else_expression: ($) => seq(
            'else',
            $._expression
        ),
        if_expression: ($) => prec.right(PREC.if,
            seq(
                'if',
                $._seq_expression,
                'then',
                $._seq_expression,
                $.else_expression
            )),
        _expression: ($) => choice(
            $._simple_expression,
            $._infix_expression,
            // $.automaton_expression,
            $.match_expression,
            $.present_expression,
            $.reset_expression,
            $.if_expression,
            $.let_expression,
            // init
            'init',
            // tuple
            prec.right(PREC.seq,
                seq($._expression, ',',
                    separated_nonempty_list(',',
                        $._expression)
                )
            ),
            // app
            prec.right(PREC.app,
                seq($._simple_expression,
                    repeat1($._simple_expression)
                )
            ),
            // infx
            // prfx
            prec(PREC.prefix,
                seq($.prfx, $._expression)),
            // record update
            seq(
                '{',
                $._simple_expression,
                'with',
                $._simple_expression,
                '=',
                $._expression,
                '}'
            ),
            // slice
            seq(
                $._simple_expression,
                '{',
                $._size_expression,
                '..',
                $._size_expression,
                '}'
            ),
            // concat
            seq('{', $._simple_expression, '|',
                $._simple_expression,
                '}'),
            // access
            prec(PREC.dot,
                seq($._expression, '.', '(', $._expression,
                    ')')),
            // record access
            prec(PREC.dot,
                seq($._expression, '.', $._ext_ident)
            ),
            // period
            seq('period', $._period_expression),
            // do in
            seq(
                optional($._local_list),
                'do',
                $._equation_list,
                'in',
                $._expression
            ),
            // prefix minus
            prec(PREC.neg, seq(
                alias(choice('-', '-.'), $.prfx),
                $._expression
            ))
        ),


        _automaton_handlers_equation: ($) =>
            automaton_handlers(
                optional($._equation_list)
            )($),
        _match_handlers_block_eq: ($) =>
            match_handlers(
                $._block_of_equation
            )($),
        _match_handlers_expression: ($) =>
            match_handlers(
                $._expression
            )($),


        _block_of_equation: ($) => $._simple_equation,
        reset_equation: ($) => seq(
            'reset',
            $._equation_list,
            'every',
            $._expression
        ),
        present_equation: ($) => prec.right(PREC.present,
            seq(
                'present',
                optional('|'),
                present_handlers($._scondpat, $
                    ._block_of_equation),
                optional(
                    seq(
                        'else',
                        $._block_of_equation
                    )
                ),
                optional('end')
            )
        ),
        else_equation: ($) => seq(
            'else',
            $._block_of_equation
        ),
        if_equation: ($) => prec.right(PREC.if,
            seq(
                'if',
                $._seq_expression,
                'then',
                $._block_of_equation,
                optional($.else_equation)
            )
        ),
        match_equation: ($) => prec.right(PREC.match,
            seq(
                'match',
                $._seq_expression,
                'with',
                optional('|'),
                $._match_handlers_block_eq,
                optional('end')
            )
        ),
        automaton_equation: ($) => prec.right(PREC.automaton,
            seq(
                'automaton',
                optional('|'),
                $._automaton_handlers_equation,
                optional(seq('init', $._state)),
                optional('end')
            )
        ),
        last_equation: ($) => seq(
            'last',
            $._ide, '=',
            $._expression
        ),
        forall_equation: ($) => seq(
            'forall',
            list_of(',', $._index),
            block($._equation_list)($),
            optional(
                seq(
                    'initialize',
                    list_of(
                        'and',
                        $.last_equation
                    )
                )
            ),
            'done'
        ),
        der_equation: ($) => seq(
            'der',
            $._ide,
            '=',
            $._seq_expression,
            optional(seq('init',
                $._expression)),
            optional(
                seq(
                    'reset',
                    optional('|'),
                    present_handlers($._scondpat,
                        $._expression)
                )
            )
        ),
        period_equation: ($) => seq(
            'period',
            $.pattern, '=',
            $._period_expression
        ),
        next_equation: ($) => seq(
            'next',
            $._ide,
            '=',
            $._seq_expression,
            optional(seq('init',
                $._seq_expression))
        ),
        emit_equation: ($) => seq(
            'emit',
            $._ide,
            optional(seq('=', $._seq_expression))
        ),
        eq_equation: ($) => seq(
            $.pattern,
            choice('=', '+='),
            $._seq_expression
        ),
        _equation_list: ($) => list_of('and',
            $._equation),


        _period_expression: ($) => choice(
            seq('(', $._expression, ')'),
            seq('(', $._expression, '|', $._expression,
                ')')
        ),
        _scondpat: ($) => choice(
            $._simple_expression,
            seq($._simple_expression, $._simplepattern),
            seq(
                'up',
                $._simple_expression
            ),
            prec.right(PREC.and,
                seq($._scondpat, '&', $._scondpat)
            ),
            prec.right(PREC.or,
                seq($._scondpat, '|', $._scondpat)
            ),
            prec.right(PREC.on,
                seq($._scondpat, 'on', $._scondpat)
            )
        ),


        _simplepattern: ($) => choice(
            $._atomic_constant,
            seq('(', ')'),
            '_',
            seq('-', choice($.integer, $.float)),
            $.constructor,
            $._ide,
            seq('(', separated_nonempty_list(
                    ',', $.pattern),
                ')'),
            seq('(', $.pattern, ':', $._type_expression,
                ')'),
            seq('{', '_', '}'),
            seq('{', separated_nonempty_list(
                    ';', $.pattern_label),
                '}')
        ),
        pattern: ($) => choice(
            $._simplepattern,
            prec.right(PREC.match,
                seq($.pattern, 'as', $.identifier)
            ),
            prec.right(PREC.or,
                seq($.pattern, '|', $.pattern)),
            prec.left(PREC.seq,
                seq($.pattern, ',',
                    separated_nonempty_list(
                        ',', $
                        .pattern))
            ),
            seq($.constructor, $._simplepattern)
        ),


        one_let: ($) => seq(
            'let',
            optional('rec'),
            $._equation_list
        ),
        _let_list: ($) => seq(
            $.one_let,
            'in',
            optional($._let_list)
        ),

        one_local: ($) => seq(
            $._ide,
            optional(
                seq(
                    choice(
                        'default',
                        'init'
                    ),
                    $._constant)),
            optional(seq('with', $._ext_ident))
        ),
        _local_list: ($) => seq(
            'local',
            list_of(',', $.one_local),
            optional('in'),
            optional($._local_list)
        ),


        _index: ($) => choice(
            seq($._ide, 'in', $._simple_expression),
            seq($._ide, 'out', $._ide),
            seq(
                $._ide,
                'in',
                $._simple_expression,
                '..',
                $._simple_expression
            )
        ),


        _state: ($) => choice(
            $.constructor,
            seq(
                $.constructor,
                '(',
                separated_nonempty_list(',', $._expression),
                ')'
            )
        ),
        _state_pat: ($) => choice(
            $.constructor,
            seq($.constructor, '(', list_of(',',
                    $.identifier),
                ')')
        ),


        _ext_ident: ($) => prec(PREC.dot, choice(
            $._ide,
            seq($.constructor, '.', $._ide)
        )),
        _ide: ($) => choice(
            $.identifier,
            seq('(', $.infx, ')')),


        _constant: ($) => choice(
            $._atomic_constant,
            $._ext_ident),

        _infx0: ($) => choice(
            'fby',
            /[\=<\>\&\|\$][\!\$\%\&\*\+\-\.\/\:<\=\>\?\@\^\|\~]*/
        ),
        _infx1: ($) => choice(
            /[\@\^][\!\$\%\&\*\+\-\.\/\:<\=\>\?\@\^\|\~]*/
        ),
        _infx2: ($) => choice(
            'lor', 'lxor', 'or',
            /[\+\-][\!\$\%\&\*\+\-\.\/\:<\=\>\?\@\^\|\~]*/
        ),
        _infx3: ($) => choice(
            'quo', 'mod', 'land',
            /[\*\/\%][\!\$\%\&\*\+\-\.\/\:<\=\>\?\@\^\|\~]*/
        ),
        _infx4: ($) => choice(
            'lsl', 'lsr', 'asr',
            /\*\*[\!\$\%\&\*\+\-\.\/\:<\=\>\?\@\^\|\~]*/
        ),
        infx: ($) => choice(
            $._infx0, $._infx1, $._infx2, $._infx3,
            $._infx4
        ),

        prfx: ($) => choice(
            'up', 'atomic', 'pre', 'disc',
            'run', 'inline', 'not',
            /[\!\.\~][\!\$\%\&\*\+\-\.\/\:<\=\>\?\@\^\|\~]*/
        ),


        identifier: ($) => /[a-z_][a-zA-Z0-9_']*/,
        constructor: ($) => /[A-Z][a-zA-Z0-9_']*/,
        type_var: ($) => /'[a-z_][a-zA-Z0-9_']*/,

        integer: ($) =>
            /(\d+|0[xX][0-9A-Za-z]+|0[oO][0-9]+|0[bB][0-9]+)/,
        float: ($) =>
            /[0-9]+\.([0-9]*)?([eE][+\-]?[0-9]+)?/,
        // shamelessly stolen from (tree-sitter-c/grammar.js)[https://github.com/tree-sitter/tree-sitter-c/blob/master/grammar.js]
        string: $ => seq(
            '"',
            repeat(choice(
                token.immediate(prec(1,
                    /[^\\"\n]+/)),
                $.escape_sequence
            )),
            '"'
        ),
        // shamelessly stolen from (tree-sitter-c/grammar.js)[https://github.com/tree-sitter/tree-sitter-c/blob/master/grammar.js]
        escape_sequence: $ => token.immediate(seq(
            '\\',
            choice(
                /[^xuU]/,
                /\d{2,3}/,
                /x[0-9a-fA-F]{2,}/,
                /u[0-9a-fA-F]{4}/,
                /U[0-9a-fA-F]{8}/
            )
        )),
        char: ($) =>
            /'([^"\\]|\\[\\'ntbr]|\\[0-9]{3})'/,
        bool: ($) => choice('true', 'false'),

        kind: ($) => choice(
            'node', 'hybrid', 'discrete', 'fun',
            'static'),
        arrow: ($) => choice(
            '->', '-A->', '-C->', '-D->',
            '-S->', '-AD->',
            '-AS->'),

        // shamelessly stolen and adapted from (tree-sitter-c/grammar.js)[https://github.com/tree-sitter/tree-sitter-c/blob/master/grammar.js]
